# capstone-1-project

./: README.md
backend/: .env.template  celery_app.py  celery_worker.py  main.py  models.py  pyproject.toml  settings.py
backend/helpers/: helper_auth.py  helper_chores.py  helper_email.py  helper_groups.py
backend/routes/: auth.py  chores.py  groups.py  profile_management.py  test_auth.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  apiClient.js  index.css  main.jsx  theme.js
frontend/src/components/: Layout.css  Layout.jsx
frontend/src/components/Footer/: Footer.css  Footer.jsx
frontend/src/components/Navbar/: Navbar.css  Navbar.jsx
frontend/src/pages/Dashboard/: Dashboard.jsx
frontend/src/pages/EmailVerification/: EmailVerification.jsx
frontend/src/pages/GroupManagement/: GroupManagement.jsx
frontend/src/pages/JoinGroup/: JoinGroup.jsx
frontend/src/pages/Landing/: Landing.css  Landing.jsx
frontend/src/pages/Login/: Login.jsx
frontend/src/pages/Signup/: Signup.jsx
frontend/src/styles/: tokens.css
