[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.41.5",
    "fastapi[standard]>=0.119.0",
    "pillow>=12.0.0",
    "celery[librabbitmq]>=5.5.3",
    "fastapi[standard]>=0.119.0",
    "pika>=1.3.2",
    "pwdlib[argon2]>=0.2.1",
    "pydantic-settings>=2.11.0",
    "pyjwt>=2.10.1",
    "pymongo>=4.15.3",
    "python-multipart>=0.0.20",
    "python-dateutil>=2.9.0.post0",
    "pytest>=9.0.2",
    "mongomock-motor>=0.0.36",
    "pytest-asyncio>=1.3.0",
]
